# mdl-verifier

./: Cargo.toml  README.md
examples/: verifier.rs
src/: ble.rs  lib.rs  main.rs  mdl.rs  nfc.rs
src/ble/: central.rs  peripheral.rs
src/nfc/: ndef.rs
src/nfc/ndef/: handover.rs  tnep.rs
