[package]
name = "mdl-verifier"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Syfaro <syfaro@huefox.com>"]

[dependencies]
anyhow = "1.0.96"
btleplug = "0.11.7"
ciborium = "0.2.2"
clap = { version = "4.5.30", features = ["derive", "env"] }
coset = "0.3.8"
eyre = "0.6.12"
futures = "0.3.31"
hex = "0.4.3"
hex-literal = "0.4.1"
hkdf = "0.12.4"
isomdl = { git = "https://github.com/Syfaro/isomdl.git", branch = "handover-improvements" }
nfc1 = { version = "0.5.2", default-features = false }
rand = "0.9.0"
serde_json = "1.0.139"
sha2 = "0.10.8"
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
tokio-serial = "5.4.5"
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.14.0", features = ["v4"] }
