[package]
name = "mdl-verifier"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Syfaro <syfaro@huefox.com>"]

[features]
vendored = ["dbus/vendored", "nfc1/vendored"]

[dependencies]
ble-peripheral-rust = "0.2.0"
btleplug = "0.11.7"
ciborium = "0.2.2"
futures = "0.3.31"
hex = "0.4.3"
isomdl = { git = "https://github.com/Syfaro/isomdl.git", branch = "handover-improvements" }
nfc1 = { version = "0.5.2", default-features = false }
rand = "0.9.0"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.13"
tracing = "0.1.41"
uuid = { version = "1.14.0", features = ["v4"] }

[dev-dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive", "env"] }
hex-literal = "1.0.0"
tokio-serial = "5.4.5"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[[example]]
name = "verifier"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = { version = "0.9.7", features = ["vendored"], optional = true }
